vest-dsl/test/bad/int_constraints_invalid.vest
myint = u8 | { 10..5 }
